# FastAPI-PostgresSql-SqlModel-AlembicMigration-PyTest

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  config.ini  docker-compose.dev.yml  main.py  pyproject.toml
.github/: pull_request_template.md
master_server/: config.py  server.py
master_server/database/: __init__.py  config.py
master_server/database/base/: model.py  service.py
master_server/database/user/: exception.py  model.py  schema.py  service.py
master_server/dependencies/: auth.py  common.py
master_server/enums/: user_enums.py
master_server/exceptions/: http.py
master_server/routers/: auth.py  user.py
master_server/schemas/: auth.py
master_server/utils/: auth.py  connection_manager.py  logging.py
master_server/websockets/: __init__.py  test.py
migrations/: env.py
migrations/versions/: 0a9108af8616_new_migration.py  227f30190915_new_migration.py  ab8cb82fcfb7_new_migration.py  b247493f90d6_new_migration.py
tests/: app_test_router.py  conftest.py  test_server.py
tests/dependencies/: test_auth_dependencies.py
tests/endpoints/: test_auth_endpoints.py  test_user_endpoints.py
tests/models/: test_user_model.py
tests/services/: test_base_services.py  test_user_services.py
tests/utils/: test_auth_util.py
